SERVER-71876 writeFile now works when passing a relative path